--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <form id="survey-form" action="">
             <div class="form-group">
                 <label for="" id="name-label"> Name </label>
-                <input type="text" name="name" id="name" class="form-group" placeholder="Enter your name">
+                <input type="text" name="name" id="name" class="form-group" placeholder="Enter your name" required>
             </div>
             <div class="form-group">
                 <label for="" id="email-label"> Email </label>
-                <input type="email" name="email" id="email" class="form-group" placeholder="Enter your Email">
+                <input type="email" name="email" id="email" class="form-group" placeholder="Enter your Email" required>
             </div>
             <div class="form-group">
                 <label for="" id="number-label"> Age (Optional) </label>
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <p>Which option best describes your current role? </p>
-                <select name="role" id="" id="dropdown">
+                <select name="role" id="dropdown">
                     <option value="1" disabled selected>Select current role</option>
                     <option value="2">Student</option>
                     <option value="3">Full Time Job</option>
@@ -43,13 +43,13 @@
             <div class="form-group">
                 <p class="radio-pera">Would you recommend freeCodeCamp to a friend?</p>
                 <label for="" class="flex">
-                    <input type="radio" name="recommendation" class="input-radio">Definitely
+                    <input type="radio" name="recommendation" class="input-radio" value="definitely" checked>Definitely
                 </label>
                 <label for="" class="flex">
-                    <input type="radio" name="recommendation" class="input-radio">Maybe
+                    <input type="radio" name="recommendation" class="input-radio" value="maybe">Maybe
                 </label>
                 <label for="" class="flex">
-                    <input type="radio" name="recommendation" class="input-radio">Not sure
+                    <input type="radio" name="recommendation" class="input-radio" value="not-sure">Not sure
                 </label>
             </div>
             <div class="form-group">
